--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT = 3001
 MONGO = "mongodb://127.0.0.1:27017/wellnesstracker"
 userKEY = "user-key"
+EMAIL_PASS = 'jekf mjco pduf ztxd'
+EMAIL_USER = 'storage.stuff.things@gmail.com'
