--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGO = "mongodb://127.0.0.1:27017/wellnesstracker"
 userKEY = "user-key"
 EMAIL_PASS = 'ygny opor bvaw ymre'
 EMAIL = 'instafit465@gmail.com'
-# OAUTH_SECRET = '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'
+CLIENT_URL = 'http://localhost:5173/'
