--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -21,7 +20,6 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
-    "nodemon": "^3.0.3",
-    "speakeasy": "^2.0.0"
+    "nodemon": "^3.0.3"
   }
 }
