--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "npm install nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.0",
+    "index.js": "^0.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
     "speakeasy": "^2.0.0"
   }
