--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT = 3001
-MONGO = "mongodb://127.0.0.1:27017/wellnesstracker"
+MONGO = "mongodb+srv://instafit:instafit@cluster0.bydtuu8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 userKEY = "user-key"
 EMAIL_PASS = 'ygny opor bvaw ymre'
 EMAIL = 'instafit465@gmail.com'
-CLIENT_URL = 'http://localhost:5173/'
+CLIENT_URL = 'https://instafit-frontend.onrender.com/'
