--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 3001
-MONGO = "mongodb+srv://instafit:instafit@cluster0.bydtuu8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO = "mongodb://127.0.0.1:27017/wellnesstracker"
 userKEY = "user-key"
 EMAIL_PASS = 'ygny opor bvaw ymre'
 EMAIL = 'instafit465@gmail.com'
